   * improved reloading of game configs after installing or removing addons
   * fixed threading bug in upload_logs
   * dissallow_observers is on as default if side has controller=null
   * Fixed null-pointer reference in network code
   * Made networking code check system buffer size and limit send length
   * Implemented send_file to reduce memory usage when sending files
   * Fixed tokenizer not to strip CR from quoted string becaue it would
     destroy images transfered over network
   * Added possibility to use per fight EV statistics proposed by maboul
   * Added smoother FPS limit to server
   * Fixed a mememory leak in networking code
   * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
     network play
   * added some includes to fix compilation problems with Sun Studio 12
     (patch #1066)
   * Fixed unstoned units not having their attacks at their first turn
   * Prevent steadfast ability from lowering resistance if already over 50%
   * <user data dir>/data/campaigns directory is created on first run
   * added command line parameter --config-path, which prints the path to the
     config directory and exits
   * fix a bug with variable substitution time of [event]-within-[event]
   * fix a crash with [ai] in [modify_side]
   * prevent infinite recursion when [kill] fire_event=yes is used to kill
     primary_unit on its own 'die' event (Gna! bug #11207 / Debian bug #448193 

Version 1.5.0:
 * campaigns:
   * synchronize all campaign ids with their directory name
   * greatly updated the scenario music playlists in The Rise of Wesnoth,
     Descent into Darkness and The South Guard
   * The Hammer of Thursagan:
     * instead of leadership, the dwarvish loremaster unit line now has a
       similar but unique inspire ability
   * Under the Burning Suns:
     * Minor cosmetic fixes
   * Northern Rebirth:
     * Major WML cleanup and optimisation
     * New respawn mechanism for white mages
   * Liberty: